<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.metadatacenter</groupId>
    <artifactId>cedar-parent</artifactId>
    <version>2.6.46-SNAPSHOT</version>
  </parent>

  <groupId>org.metadatacenter</groupId>
  <artifactId>cedar-cadsr-tools</artifactId>
  <version>2.6.46-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>CEDAR caDSR Tools</name>

  <scm>
    <connection>scm:git:https://github.com/metadatacenter/cedar-cadsr-tools.git</connection>
    <developerConnection>scm:git:https://github.com/metadatacenter/cedar-cadsr-tools.git</developerConnection>
    <url>https://github.com/metadatacenter/cedar-cadsr-tools</url>
    <tag>HEAD</tag>
  </scm>

  <dependencies>

    <dependency>
      <groupId>org.metadatacenter</groupId>
      <artifactId>cedar-core-library</artifactId>
    </dependency>

    <dependency>
      <groupId>org.metadatacenter</groupId>
      <artifactId>cedar-config-library</artifactId>
    </dependency>

    <dependency>
      <groupId>org.metadatacenter</groupId>
      <artifactId>cedar-model-library</artifactId>
    </dependency>

    <dependency>
      <groupId>org.metadatacenter</groupId>
      <artifactId>cedar-rest-library</artifactId>
    </dependency>

    <dependency>
      <groupId>jakarta.xml.bind</groupId>
      <artifactId>jakarta.xml.bind-api</artifactId>
      <version>3.0.0</version>
    </dependency>

    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-core</artifactId>
      <version>3.0.0</version>
    </dependency>

    <dependency>
      <groupId>com.sun.activation</groupId>
      <artifactId>jakarta.activation</artifactId>
      <version>2.0.0</version>
    </dependency>

    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-impl</artifactId>
      <version>3.0.0</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
    </dependency>
    <dependency>
      <groupId>net.sourceforge.owlapi</groupId>
      <artifactId>owlapi-distribution</artifactId>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
    </dependency>
    <dependency>
      <groupId>commons-net</groupId>
      <artifactId>commons-net</artifactId>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>cedar-cadsr-updater</id>
            <goals>
              <goal>java</goal>
            </goals>
            <configuration>
              <mainClass>org.metadatacenter.cadsr.ingestor.tools.cde.CadsrCategoriesAndCdesUpdaterTool</mainClass>
              <cleanupDaemonThreads>false</cleanupDaemonThreads>
            </configuration>
          </execution>
          <execution>
            <id>cedar-cadsr-form-translate</id>
            <goals>
              <goal>java</goal>
            </goals>
            <configuration>
              <mainClass>org.metadatacenter.cadsr.ingestor.tools.form.CadsrFormImportTool</mainClass>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>jaxb2-maven-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>xjc-cde</id>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <!-- Package with generated sources -->
              <packageName>org.metadatacenter.cadsr.cde.schema</packageName>
              <sources>
                <source>src/main/resources/xsd/cde</source>
              </sources>
              <xjbSources>
                <xjbSource>src/main/resources/xjb/bindings-cde.xjb</xjbSource>
              </xjbSources>
            </configuration>
          </execution>
          <execution>
            <id>xjc-category</id>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <packageName>org.metadatacenter.cadsr.category.schema</packageName>
              <sources>
                <source>src/main/resources/xsd/category</source>
              </sources>
              <xjbSources>
                <xjbSource>src/main/resources/xjb/bindings-category.xjb</xjbSource>
              </xjbSources>
              <!--
                    Don't clear the output directory before generating the sources.
                    Clearing the output directory removes the org.metadatacenter.cadsr.cde.schema schema from above.
                -->
              <clearOutputDir>false</clearOutputDir>
            </configuration>
          </execution>
          <execution>
            <id>xjc-form</id>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <packageName>org.metadatacenter.cadsr.form.schema</packageName>
              <sources>
                <source>src/main/resources/xsd/form</source>
              </sources>
              <xjbSources>
                <xjbSource>src/main/resources/xjb/bindings-form.xjb</xjbSource>
              </xjbSources>
              <!--
                    Don't clear the output directory before generating the sources.
                    Clearing the output directory removes the org.metadatacenter.cadsr.cde.schema schema from above.
                -->
              <clearOutputDir>false</clearOutputDir>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- Tell an IDE to include generated code in its compile phase. jsonschema2pojo uses ${basedir}/target/java-gen -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>test</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>${basedir}/target/java-gen</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
